# LittlePaimon

./: .env  .env.dev  .env.prod  .gitignore  .pre-commit-config.yaml  LittlePaimon-install-windows.ps1  LittlePaimon-install.ps1  README.md  UPDATE_LOG.md  __init__.py  bot.py  dockerfile  matcher_patch.py  pyproject.toml  requirements.txt  resource_list.json
.github/: FUNDING.yml  release.yml
.github/ISSUE_TEMPLATE/: issue-template-question.md  issue-template-suggestion.md
.github/workflows/: release_docker.yaml  update_dependencies.yml
Guess_voice/: __init__.py  character.json  download_data.py  handler.py  util.py
LittlePaimon/: __init__.py  hook.py  log.py  scheduler.py
LittlePaimon/admin/: __init__.py  bind_cookie.py
LittlePaimon/config/: __init__.py  path.py
LittlePaimon/config/command/: __init__.py
LittlePaimon/config/config/: manage.py  model.py
LittlePaimon/config/data/: alias.json  artifact.json  ban_word.txt  enka_icon.json  genshin_info.json  prop.json  role_element.json  role_skill.json  role_talent.json  roles_data.json  score.json  short_name.json  upheaval.json  weapon.json  类型.json
LittlePaimon/config/models/: plugin.py
LittlePaimon/config/plugin/: manage.py  model.py
LittlePaimon/database/: __init__.py  connect.py  models.py
LittlePaimon/database/models/: __init__.py  abyss_info.py  character.py  cookie.py  genshin_voice.py  learning_chat.py  manage.py  manager.py  memory_db.py  other.py  player_info.py  subscription.py
LittlePaimon/manager/: __init__.py  plugin.py
LittlePaimon/manager/alias_manager/: handler.py  parser.py
LittlePaimon/manager/bot_manager/: __init__.py  handler.py
LittlePaimon/manager/database_manager/: __init__.py
LittlePaimon/manager/plugin_manager/: __init__.py  draw_help.py  manager.py  model.py
LittlePaimon/plugins/Azur_Lane/: __init__.py
LittlePaimon/plugins/Chat_GPT/: __init__.py  api_request.py
LittlePaimon/plugins/Genshin_AIVoice/: __init__.py
LittlePaimon/plugins/Genshin_Calendar/: __init__.py  data_source.py  draw_calendar.py  event.py  generate.py
LittlePaimon/plugins/Genshin_Voice/: __init__.py  draw.py  handler.py  resources.py
LittlePaimon/plugins/Learning_Chat/: __init__.py  api.py  config.py  genshin_word.txt  handler.py  models.py  web_api.py  web_page.py
LittlePaimon/plugins/LittlePaimon-plugin-Abyss/: __init__.py  api.py  coin_handle.py  config.py  sign_handle.py  web_api.py  web_page.py
LittlePaimon/plugins/LittlePaimon-plugin-ck/: README.md  __init__.py
LittlePaimon/plugins/Mihoyo_bbs/: __init__.py
LittlePaimon/plugins/NoticeAndRequest/: __init__.py  config.py
LittlePaimon/plugins/Paimon_Abyss/: __init__.py  abyss_statistics.py  draw_abyss.py
LittlePaimon/plugins/Paimon_Autobbs/: __init__.py  coin_handle.py  draw.py  sign_handle.py
LittlePaimon/plugins/Paimon_Bind/: __init__.py  get_cookie.py
LittlePaimon/plugins/Paimon_Chat/: __init__.py
LittlePaimon/utils/: __init__.py  alias.py  api.py  brower.py  browser.py  enka.py  files.py  filter.py  genshin.py  genshin_api.py  image.py  logger.py  message.py  migration.py  mihoyo_bbs.py  path.py  requests.py  scheduler.py  status.py  tool.py  typing.py  update.py
LittlePaimon/web/: __init__.py
Paimon_Calendar/: __init__.py  draw.py  event.py  generate.py
Paimon_Calendar/template/: calendar.html  index.css  normalize.css
Paimon_Calender/: __init__.py  calendar_config.py  draw.py  generate.py
Paimon_Chat/: __init__.py  chat_list.py
Paimon_Chat/Learning_repeate/: main.py  model.py
Paimon_CloudGenshin/: __init__.py  data_source.py
Paimon_Cloudys/: __init__.py
Paimon_Exchange/: __init__.py  data_source.py
Paimon_Gacha/: __init__.py  gacha_info.py  gacha_res.py
Paimon_Gacha_Log/: UIGF_and_XLSX.py  __init__.py  api.py  gacha_logs.py  get_img.py
Paimon_Info/: __init__.py  draw_abyss_info.py  draw_daily_note.py  draw_month_info.py  draw_player_card.py  draw_role_card.py  get_coin.py  get_data.py
Paimon_Info/damage_cal/: common.py  damage.py  hutao.py  leishen.py  shenhe.py  xiangling.py  xiao.py  zhongli.py
Paimon_Plugins/: __init__.py  _order.py  auto_handle.py  chat.py  couplets.py  news.py  order.py  paimon_help.py  random_img.py
Paimon_Wiki/: __init__.py  abyss_rate_data.py  abyss_rate_draw.py  blue.py
config/: browser_cfg.yml  paimon_config_default.yml  paimon_greet_default.yml
config/plugins/: Genshin_AIVoice.yml  Genshin_Calendar.yml  Genshin_Voice.yml  Paimon_Autobbs.yml  Paimon_Bind.yml  Paimon_DailyNote.yml  Paimon_Gacha.yml  Paimon_Gacha_Log.yml  Paimon_Info.yml  Paimon_MonthInfo.yml  Paimon_Wiki.yml  alias_manager.yml  news60s.yml  nonebot_plugin_couplets.yml  nonebot_plugin_myb_exchange.yml
example/: plugin_data.py
hoshino/: R.py  __init__.py  msghandler.py  priv.py  service.py
hoshino/config_example/: __bot__.py
hoshino/util/: __init__.py
res/gacha_res/: type.json
res/role_side_card/: .gitignore
src/plugins/nonebot_plugin_couplets/: README.md  __init__.py  pyproject.toml
src/plugins/nonebot_plugin_myb_exchange/: README.md  __init__.py  data_source.py  pyproject.toml  utils.py
user_data/: README.md
utils/: PIL_util.py  aiorequests.py  alias.json  alias_handler.py  auth_util.py  character_alias.py  config.py  db_util.py  decorator.py  enka_util.py  event.py  file_handler.py  generate.py  help.json  http_util.py  message_util.py  short_name.json  util.py
utils/json/: artifact.json  ban_word.txt  prop.json  role_element.json  role_talent.json  score.json
utils/json_data/: alias.json  role_region.json  role_skill.json  roles_data.json  score.json  short_name.json  upheaval.json  weapon.json
(+161 files in other folders)
