[tool.poetry]
name = "LittlePaimon"
version = "3.0.4"
description = "小派蒙！原神qq群机器人，基于NoneBot2的UID查询、抽卡导出分析、模拟抽卡、实时便签、札记等多功能小助手。"
authors = ["惜月 <277073121@qq.com>"]
license = "AGPL"

[[tool.poetry.source]]
name = "aliyun"
default = true
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = {extras = ["fastapi"], version = "^2.0.0-rc.2"}
nonebot-adapter-onebot = "^2.1"
beautifulsoup4 = "^4.10.0"
httpx = "^0.23.0"
lxml = "^4.8.0"
Pillow = "^9.1.0"
matplotlib = "^3.5.1"
tortoise-orm = "^0.19.2"
tqdm = "^4.64.0"
"ruamel.yaml" = "^0.17.21"
ujson = "^5.4.0"
expandvars = "^0.9.0"
jieba = "^0.42.1"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"
shapely = "^1.8.4"
gitpython = "^3.1.27"
pypinyin = "^0.47.1"
python-jose = "^3.3.0"
amis-python = "^1.0.5"
psutil = "^5.9.3"
nonebot-plugin-apscheduler = "^0.2.0"
playwright = "^1.27.1"
qrcode = "^7.3.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.7"

[tool.nonebot]
plugins = ["nonebot_plugin_gocqhttp", "nonebot_plugin_guild_patch", "nonebot_bison", "nonebot_plugin_easy_translate"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
